--- a/app/views/homes/_news_info.html.erb
+++ b/app/views/homes/_news_info.html.erb
@@ -1,7 +1,7 @@
 <% articles.each do |article| %>
   <div class="news--articles__item">
     <div class="news--articles__image">
-      <%= image_tag article["urlToImage"] %>
+      <%= image_tag article["urlToImage"], alt: "no_image" %>
     </div>
     <div class="news--articles__title">
       <%= link_to article["title"], article["url"] %>
