--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -62,9 +62,11 @@
 
 // 会員詳細画面
 .user-show{
+  width: 100%;
+  height: 100vh;
   display: flex;
   background-image: image_url('renga.jpg');
-  background-size: cover;
+  background-repeat: repeat;
   &--posts{
     width: 1100px;
     margin: 60px 0 0 50px;
@@ -144,4 +146,3 @@
     right: 10px;
   }
 }
-
