--- a/app/views/post_favorites/index.html.erb
+++ b/app/views/post_favorites/index.html.erb
@@ -1,3 +1,4 @@
+<div class= "background"></div>
 <div class="user-show">
   <div class="user-show--info">
     <%= render "users/info", user: @user, messages: @messages %>
