--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -81,7 +81,7 @@
 <!--背景の動きを加える-->
 <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 <script>
-  particlesJS.load('particles-js', 'public/assets/particles.json', function() {
+  particlesJS.load('particles-js', 'assets/particles.json', function() {
       console.log('callback - particles.js config loaded');
     });
 </script>
