--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -81,8 +81,9 @@
 <!--背景の動きを加える-->
 <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 <script>
-  particlesJS.load('particles-js', 'assets/particles-121e441504cc1943ac8ccfe9c7efc01e54fa9b8e5d3f82581219c40277067c24.jsonz', function() {
+  particlesJS.load('particles-js', 'assets/particles-121e441504cc1943ac8ccfe9c7efc01e54fa9b8e5d3f82581219c40277067c24.json', function() {
       console.log('callback - particles.js config loaded');
     });
 </script>
+
 
